# NachoMines

./: .gitignore  LICENSE  README.md  run_game.py  setup.cfg  setup.py
nachomines/: __init__.py  __main__.py  nachomines.desktop
nachomines/resources/images/gimp_xcf/: MainMenu.xcf  logo.xcf  mines_cleared.xcf  you_lost.xcf
nachomines/scripts/: Utils.py  auto_load.py  button.py  fixPath.py  get_file.py  main.py  utils.py
