[metadata]
name = nachomines
author = NachoMonkey

url = https://github.com/nachomonkey/NachoMines

description = Simple python minesweeper game using pygame
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT

classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Puzzle Games
    Development Status :: 5 - Production/Stable
    Natural Language :: English

[options]
packages = nachomines
           nachomines.scripts

zip_safe = False
install_requires =
    setuptools
    pygame

[options.entry_points]
console_scripts =
    nachomines = nachomines.scripts.main:run
